@@ -350,6 +350,8 @@ void CDVBSub::Render(SubPicDesc& spd, REFERENCE_TIME rt, RECT& bbox)
 
     DVB_PAGE* pPage = FindPage(rt);
 
+    bool BT709 = m_infoSourceTarget.sourceMatrix == BT_709 ? true : m_infoSourceTarget.sourceMatrix == NONE ? (m_displayInfo.width > 720) : false;
+
     if (pPage != nullptr) {
         pPage->rendered = true;
         TRACE_DVB(_T("DVB - Renderer - %s - %s\n"), ReftimeToString(pPage->rtStart), ReftimeToString(pPage->rtStop));
@@ -371,7 +373,8 @@ void CDVBSub::Render(SubPicDesc& spd, REFERENCE_TIME rt, RECT& bbox)
                         nY = regionPos.vertAddr  + objectPos.object_vertical_position;
                         pObject->m_width  = pRegion->width;
                         pObject->m_height = pRegion->height;
-                        pObject->SetPalette(pCLUT->size, pCLUT->palette, m_displayInfo.width > 720);
+                        pObject->SetPalette(pCLUT->size, pCLUT->palette, BT709,
+                                            m_infoSourceTarget.sourceBlackLevel, m_infoSourceTarget.sourceWhiteLevel, m_infoSourceTarget.targetBlackLevel, m_infoSourceTarget.targetWhiteLevel);
                         pObject->RenderDvb(spd, nX, nY);
                         TRACE_DVB(_T(" --> %d/%d - %d/%d\n"), nRegion, pPage->regionsPos.GetCount(), nObject, pRegion->objects.GetCount());
                     }
