@@ -1,6 +1,6 @@
 /*
  * (C) 2003-2006 Gabest
- * (C) 2006-2013 see Authors.txt
+ * (C) 2006-2014 see Authors.txt
  *
  * This file is part of MPC-HC.
  *
@@ -31,8 +31,11 @@
 #include "../../../DSUtil/MediaTypes.h"
 #include "../../../SubPic/MemSubPic.h"
 #include "../../../SubPic/SubPicQueueImpl.h"
+#include "../../../Subtitles/RenderedHdmvSubtitle.h"
 
 #include <InitGuid.h>
+#include <d3d9.h>
+#include <dxva2api.h>
 #include "moreuuids.h"
 
 ///////////////////////////////////////////////////////////////////////////
@@ -1587,6 +1590,30 @@ void CDirectVobSubFilter::SetSubtitle(ISubStream* pSubStream, bool fApplyDefStyl
             }
 
             pRTS->Deinit();
+        } else if (clsid == __uuidof(CRenderedHdmvSubtitle)) {
+            CRenderedHdmvSubtitle* pRHS = (CRenderedHdmvSubtitle*)(ISubStream*)pSubStream;
+
+            DXVA2_ExtendedFormat extFormat;
+            extFormat.value = m_cf;
+            CString yuvMatrix = (extFormat.NominalRange == DXVA2_NominalRange_Normal) ? _T("PC.") : _T("TV.");
+
+            switch (extFormat.VideoTransferMatrix) {
+                case DXVA2_VideoTransferMatrix_BT601:
+                    yuvMatrix.Append(_T("601"));
+                    break;
+                case DXVA2_VideoTransferMatrix_BT709:
+                    yuvMatrix.Append(_T("709"));
+                    break;
+                case DXVA2_VideoTransferMatrix_SMPTE240M:
+                    yuvMatrix.Append(_T("240M"));
+                    break;
+                default:
+                    yuvMatrix = _T("None");
+                    break;
+            }
+
+            // Actually VSFilter expect full range (A)RGB frames to work with.
+            pRHS->SetSourceTargetInfo(yuvMatrix, 0, 255);
         }
     }
 
